Improved BertJUnitConfig